# discord_bot

./: .gitignore  Cargo.toml
macros/: Cargo.toml
macros/src/: lib.rs
src/: command.rs  data.rs  db.rs  error.rs  handler.rs  hook.rs  macros.rs  main.rs  model.rs  permission.rs  rainbow.rs  sql.rs
src/data/: db.rs  guild_info.rs  stats_client.rs
src/model/: guild_info.rs
src/rainbow/: command.rs  error.rs  message.rs  model.rs  permission.rs  role.rs  utils.rs  worker.rs
src/rainbow/command/: error.rs  link.rs  unlink.rs
src/rainbow/sql/: model.rs
src/rainbow/worker/: rank_updater.rs
